// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Button/Button.tools.svelte: Default 1`] = `
<span>
  <button
    class="svelte-xh4kfu"
  >
     
    <span>
      Default
    </span>
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Disabled 1`] = `
<span>
  <button
    class="svelte-xh4kfu"
    disabled=""
  >
     
    <span>
      Disabled
    </span>
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Large icon 1`] = `
<span>
  <button
    class="iconOnly large svelte-xh4kfu"
  >
    <i
      class="material-icons svelte-xh4kfu"
    >
      play_arrow
    </i>
     
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Large text and icon 1`] = `
<span>
  <button
    class="large svelte-xh4kfu"
  >
    <i
      class="material-icons svelte-xh4kfu"
    >
      person
    </i>
     
    <span>
      Hey!
    </span>
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Primary 1`] = `
<span>
  <button
    class="primary svelte-xh4kfu"
  >
     
    <span>
      Primary
    </span>
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Primary disabled 1`] = `
<span>
  <button
    class="primary svelte-xh4kfu"
    disabled=""
  >
     
    <span>
      Primary
    </span>
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Primary icon 1`] = `
<span>
  <button
    class="primary iconOnly svelte-xh4kfu"
  >
    <i
      class="material-icons svelte-xh4kfu"
    >
      volume_up
    </i>
     
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Primary with badge 1`] = `
<span>
  <button
    class="primary svelte-xh4kfu"
  >
    <i
      class="material-icons svelte-xh4kfu"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
     
     
    <div
      class="badge svelte-xh4kfu halo"
    >
      5
    </div>
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Text and icon 1`] = `
<span>
  <button
    class="svelte-xh4kfu"
  >
    <i
      class="material-icons svelte-xh4kfu"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: With badge 1`] = `
<span>
  <button
    class="svelte-xh4kfu"
  >
    <i
      class="material-icons svelte-xh4kfu"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
     
     
    <div
      class="badge svelte-xh4kfu halo"
    >
      23
    </div>
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: With badge limit 1`] = `
<span>
  <button
    class="svelte-xh4kfu"
  >
    <i
      class="material-icons svelte-xh4kfu"
    >
      warning
    </i>
     
    <span>
      Just too much
    </span>
     
     
    <div
      class="badge svelte-xh4kfu halo"
    >
      999+
    </div>
  </button>
</span>
`;
